--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev --turbopack",
-    "start": "next start"
+    "dev": "next dev",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -12,7 +13,7 @@
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "15.0.4-canary.46",
+    "next": "15.2.0-canary.16",
     "next-auth": "5.0.0-beta.19",
     "postcss": "8.4.49",
     "react": "19.0.0",
