--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "15.2.0-canary.16",
+    "next": "15.1.6",
     "next-auth": "5.0.0-beta.19",
     "postcss": "8.4.49",
     "react": "19.0.0",
@@ -30,5 +30,10 @@
     "@types/react-dom": "19.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.6"
+  },
+  "pnpm": {
+    "overrides": {
+      "cookie@<0.7.0": ">=0.7.0"
+    }
   }
 }
